# zero-caption

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
app/: bootstrap.py  container.py  main.py
config/: default.toml  settings.py
config/profiles/: cpu.toml  gpu.toml
core/domain/: entities.py  enums.py
core/dto/: __init__.py  app_state.py  media_dto.py  project_dto.py  subtitle_dto.py  task_dto.py
core/ports/: asr.py  events.py  exporter.py  repository.py  translator.py
core/services/: task_service.py
core/usecases/: __init__.py  create_project.py  export_video.py  transcribe_video.py  translate_subtitles.py
design/: zero-caption_开发计划.md  zero-caption_阶段2_AI任务提示词.md  zero-caption_阶段2_AI单次执行任务清单.md  zero-caption_阶段2开发计划.md  推荐项目骨架说明.md  视频字幕生成与翻译软件_应用框架设计.md
infrastructure/logging/: setup.py
infrastructure/media/: ffmpeg.py  ffprobe.py
infrastructure/storage/: workspace.py
infrastructure/task/: job_queue.py
infrastructure/translation/: base.py
scripts/: __init__.py  check_runtime.py
tests/: test_entities.py  test_enums.py  test_settings.py  test_usecase_contracts.py  test_workspace.py
tests/fixtures/: README.md
tests/integration/: test_ffmpeg_adapter.py  test_ffprobe_adapter.py  test_runtime_probe.py
ui/dialogs/: import_dialog.py
ui/pages/: projects_page.py  settings_page.py  tasks_page.py
ui/widgets/: navigation.py  status_bar.py
ui/windows/: main_window.py
