[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-caption"
version = "0.1.0"
description = "Windows desktop shell for video subtitle generation and translation"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "ui*", "core*", "infrastructure*", "config*"]
